added initial inputs

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id="final-value">
         <p>Enter values separated by commas below, then click on the spin button to start</p>
       </div>
-      <textarea id="inputs"></textarea>
+      <textarea id="inputs">1, 2, 3, 4, 5, 6</textarea>
     </div>
     <!-- Chart JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
