nicer spin speed and new output for landing on line inbetween results

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         <canvas id="wheel"></canvas>
         <button id="spin-btn">Spin</button>
-        <img src="https://i.imgur.com/t0PxAp9.jpg" />
+        <img src="https://i.imgur.com/9pCRFbR.png" />
       </div>
       <div id="final-value">
         <p>Enter values separated by commas below, then click on the spin button to start</p>
